--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Toppages#index</h1>
-<p>Find me in app/views/toppages/index.html.erb</p>
+<div class="container">
+    <%= 'しりとり' %>
+    
+    <%= form_with url: 'toppage_index_path', method: :get, local: true do |f| %>
+     <%= f.text_field :shiritori_code, class: "index_form" %>
+    
+    <% end %>
+    
+    <p>結果:<%= @title %></p>
+</div>
