--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     <%= 'しりとり' %>
     
-    <%= form_with url: 'toppage_index_path', method: :get, local: true do |f| %>
-     <%= f.text_field :shiritori_code, class: "index_form" %>
+    <%= form_with url: toppages_path, method: :get, local: true do |f| %>
+    <%= f.text_field :shiritori_code, class: "index_form", placeholder:"言葉" %>
     
     <% end %>
     
