--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>しりとりを始める</h1>
+
+<div class="row">
+  <div class="col-sm-6 offset-sm-3">
+
+    
+<%= form_with(model: @user, local: true) do |f| %>
+
+      
+      <div class="form-group">
+        
+<%= f.label :name, 'あなたの名前(ランキングに表示されるよ)' %>
+
+        
+<%= f.text_field :name, class: 'form-control' %>
+
+      </div>
+
+      
+<%= f.submit 'スタート', class: 'btn btn-primary btn-block' %>
+
+    
+<% end %>
+
+  </div>
+</div>
