--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <ul class="navbar-nav">
           <li class="nav-item">
-<%= link_to 'しりとしする', signup_path, class: 'nav-link' %>
+<%= link_to 'しりとりする', signup_path, class: 'nav-link' %>
 </li>
           <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
         </ul>
